# structural-analysis

./: .gitignore  CITATION.cff  LICENSE  README.md  mkdocs.yml  populate_library.sh  pyproject.toml  structural_analysis_theories_comprehensive.csv
.clinerules/: general.md
.clinerules/workflows/: implement_theory.md
.github/: copilot-instructions.md
.github/copilot/: context.md
docs/: contributing.md  index.md
docs/api/: beam-theory.md  column-theory.md  core.md  index.md
docs/development/: adding-theories.md  architecture.md  roadmap.md
docs/examples/: beam-analysis.md  case-studies.md  column-design.md  index.md
docs/getting-started/: concepts.md  installation.md  quick-start.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/theories/: advanced.md  index.md
docs/theories/beam-theory/: euler-bernoulli.md  timoshenko.md
docs/theories/column-theory/: advanced.md  euler-buckling.md
src/structural_analysis/: __init__.py  beam_theory.py  column_theory.py  displacement_method.py  dynamic_theory.py  energy_method.py  force_method.py  fracture_theory.py  material_theory.py  nonlinear_theory.py  plane_theory.py  plate_shell_theory.py  specialized_theory.py  stability_theory.py
tests/: test_beam_theory.py  test_column_theory.py
